<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".perfilActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp"
            android:gravity="center_horizontal">

            <!-- Imagen de perfil -->

            <Button
                android:id="@+id/botoningresarfin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/edit_text_rounded"
                android:fontFamily="sans-serif-medium"
                android:text="@string/Finanza"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.08"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextContraseña" />

            <ImageView
                android:id="@+id/imgPerfil"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="40dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/logos" />
            <!-- Email -->

            <!-- Nombre -->

            <TextView
                android:id="@+id/infoEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/Correo_registrado"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/No_registro"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/infoNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/Nombre_registrado"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/labelNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/Nam"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:background="@drawable/gogle_rounded"
                android:hint="Editar Nombre"
                android:padding="15dp"
                android:visibility="gone" />

            <!-- Apellido -->

            <TextView
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/Des"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/infoApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/Apellido_registrado"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/labelApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/ape"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/Des"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Editar Apellido"
                android:visibility="gone"
                android:background="@drawable/gogle_rounded"
                android:padding="15dp"
                android:layout_marginBottom="30dp" />

            <!-- Teléfono -->

            <TextView
                android:id="@+id/infoTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/Telefono_registrado"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/labelTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/tf"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/No_registro"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Editar Teléfono"
                android:visibility="gone"
                android:background="@drawable/gogle_rounded"
                android:padding="15dp"
                android:layout_marginBottom="40dp" />

            <!-- Botón Editar -->
            <Button
                android:id="@+id/btnEditar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edit_text_rounded"
                android:fontFamily="sans-serif-medium"
                android:padding="15dp"
                android:text="@string/edt"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <!-- Botón Guardar -->
            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Guardar"
                android:background="@drawable/edit_text_rounded"
                android:textColor="@color/white"
                android:padding="15dp"
                android:visibility="gone"
                android:layout_marginBottom="20dp" />

            <!-- Botón Cancelar -->
            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Cancelar"
                android:background="@drawable/edit_text_rounded"
                android:textColor="@color/white"
                android:padding="15dp"
                android:visibility="gone"
                android:layout_marginBottom="40dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
