<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgLogRc"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@mipmap/_launcher_foreground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgLogRc" />

        <TextView
            android:id="@+id/txInsRC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/Ing_datos"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textAppName" />

        <EditText
            android:id="@+id/editNombre"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/gogle_rounded"
            android:hint="Nombre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txInsRC" />

        <EditText
            android:id="@+id/etEmRc"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="16dp"
            android:background="@drawable/gogle_rounded"
            android:hint="Correo Electrónico"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editApellido" />

        <EditText
            android:id="@+id/editTelefono"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="16dp"
            android:background="@drawable/gogle_rounded"
            android:hint="Teléfono"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEmRc" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="16dp"
            android:layout_marginTop="208dp"
            android:background="@drawable/gogle_rounded"
            android:fontFamily="sans-serif"
            android:hint="Contraseña"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.156"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTelefono" />

        <EditText
            android:id="@+id/editPasswordConfirm"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="16dp"
            android:background="@drawable/gogle_rounded"
            android:hint="Repetir Contraseña"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editPassword" />

        <CheckBox
            android:id="@+id/checkTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acep"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editPasswordConfirm" />

        <EditText
            android:id="@+id/editApellido"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/gogle_rounded"
            android:hint="Apellido"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editNombre" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@drawable/edit_text_rounded"
            android:fontFamily="sans-serif-medium"
            android:text="@string/regis"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkTerms" />

        <TextView
            android:id="@+id/textLoginRedirect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/Ya_sesion"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnRegister" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
